fixed word break and white-space pre-wrap on a pre element containing post text

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -342,7 +342,13 @@ Article -> Details
 }
 
 .details-article-body {
-	word-wrap: break-word;
+	white-space: pre-wrap;
+	word-break:keep-all;
+	white-space: pre-wrap;       /* Since CSS 2.1 */
+	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+	white-space: -pre-wrap;      /* Opera 4-6 */
+	white-space: -o-pre-wrap;    /* Opera 7 */
+	word-wrap: break-word;       /* Internet Explorer 5.5+ */
 	border-top: 3px dashed #89d814d2;
 	border-bottom: 3px dashed #89d814d2;
 	background-color: #dadee6;
